# rosbagReading

./: README.md
gpsbag/: CMakeLists.txt  package.xml
gpsbag/src/: readgpsvel.cpp
gpsbag/src/trafficdata/: gpsdata.txt
